feat(api): adicionar relação de categoria nas tarefas e atualizar tipagens
